--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Images (Insta)
                 height: 100%;
             }
             .typewriter {
+                font-size: 1em;
                 color: white;
                 font-family: monospace;
                 overflow: hidden; 
@@ -62,6 +63,7 @@ Images (Insta)
             #mind {
                 color: rgba(255,255,255,0.2);
                 user-select: none;
+                overflow: hidden;
             }
             .btn {
                 border: solid .1em white;
@@ -81,8 +83,8 @@ Images (Insta)
                 color: red;
             }
             .fill {
-                height: 95vh;
-                line-height: 95vh;
+                height: 60vh;
+                padding-top: 30vh;
             }
             @keyframes typing {
                 from { width: 0 }
@@ -104,7 +106,11 @@ Images (Insta)
                 <a href="https://www.fiverr.com/anicybergroup"><div class="btn">Shop</div></a>
                 <a href="https://discord.gg/9CXN6Um"><div class="btn">Chat</div></a>
                 <a href="https://www.instagram.com/_anicyber/"><div class="btn">Images</div></a>
-                <a onclick=""><div class="btn">Apps...</div></a>
+                <a onclick="document.getElementById('apps').style.display='inline';this.style.display='none';"><div class="btn">Apps...</div></a>
+                <div id="apps" style="display:none;">
+                    <a onclick=""><div class="btn">Notes</div></a>
+                    <a onclick=""><div class="btn">Flash Cards</div></a>
+                </div>
             </div>
             <p id="mind"></p>
             <p id="time"></p>
@@ -117,8 +123,6 @@ Images (Insta)
                 document.getElementById("time").innerText = theNow.toString().toUpperCase();
             }
             var clock = setInterval(updateTime, 1000);
-            
-            updateTime();
 
             function addNumbers(numbers) {
                 var total = 0;
