--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ Features to add:
 Better navigation...
 - Back button
 - Better "page" clearing, element handling
-
+- Shop (Web, Merch)
+- Grade/[explore] (Games, Gadgets, Cars, Music)
     -->
     <head>
         <title>ANICYBER</title>
