--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@ Better navigation...
                     <a onclick="startCode();"><div class="btn">Code</div></a>
                     <a onclick="startNotes();"><div class="btn">Notes</div></a>
                     <a href="https://robertegj.github.io/Flash-Cards/"><div class="btn">Flash Cards</div></a>
-                    <a onclick="startDraw();"><div class="btn">Draw</div></a>
+                    <a href="https://robertegj.github.io/Typing-Game/"><div class="btn">Typing Game</div></a>
+		    <a onclick="startDraw();"><div class="btn">Draw</div></a>
                     <a onclick="startSound();"><div class="btn">Sound</div></a>
                 </div>
             </div>
