--- a/index.html
+++ b/index.html
@@ -5,36 +5,78 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <style>
             body {
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 text-align: center;
+                padding: 0;
+                margin: 0;
+            }
+            header {
+                color: black;
+                padding: .5em;
+            }
+            footer {
+                position: fixed;
+                bottom: 0;
+                width: 100%;
             }
             #typingForm {
-                border: 2px solid white;
+                /* border: 2px solid white; */
+            }
+            #game {
+                border: 2px solid black;
+                border-radius: 1em;
+                max-width: 600px;
+                margin: auto;
+            }
+            #score {
+                background: springgreen;
+                border-radius: 1em;
+                padding-left: 1em;
+                padding-right: 1em;
+            }
+            .right {
+                animation: happy-wiggle 0.2s 2;
             }
             .wrong {
-                animation: angry-wiggle 0.2s 3;
+                animation: angry-wiggle 0.2s;
             }
             @keyframes angry-wiggle{
                 0%   {border: 2px solid white;background: white;}
-                50%  {border: 2px solid red;  background: red;margin-right: 10px;}
+                50%  {border: 2px solid red;  background: red;}
                 100% {border: 2px solid white;background: white;}
-        }
+            }
+            @keyframes happy-wiggle{
+                0%   {background: springgreen;}
+                50%  {background: white}
+                100% {background: springgreen;}
+            }
         </style>
     </head>
     <body>
         
-        <p>Rob's typing game</p>
-        <h2>Current word:</h2>
-        <h1 id="currentWord"></h1>
-        <i id="currentDefinition"></i>
-        <br /><br />
-        <form id="typingForm">
-            <input id="typedWord" type="text"  autofocus autocomplete="off"/>
-            <input type="submit" />
-        </form>
+        <header>Rob's typing game</header>
         <br />
-        Solved: <span id="score"></span>
-        <button onclick="resetScore()">Reset Score</button>
-        <button onclick="caseSense(this)">Case Sensitivity: On</button>
+        <div id="game">
+            <h2 style="color:slategray; ">Current Word:</h2>
+            <h1 id="currentWord"></h1>
+            <i id="currentDefinition"></i>
+            <br /><br />
+            <form id="typingForm">
+                <input id="typedWord" type="text"  autofocus autocomplete="off"/>
+                <input type="submit" value="Submit"/>
+            </form>
+            <br />
+            Solved: <span id="score"></span>
+            <br /><br />
+            <button onclick="resetScore()">Reset Score</button>
+            <button onclick="caseSense(this)">Case Sensitivity: On</button>
+            <br /><br />
+        </div>
+
+        <footer>
+            Copyleft 2022 - I hope we're OK.
+        </footer>
+
         <script>
             var caseSensitive = true;
 
@@ -63,11 +105,6 @@
             }
 
             // BigAss Wordlist. Should fetch instead maybe?
-            wordList2 = {
-                "test" : "definition",
-
-            }
-
             wordList = [
   ["programming","setting an order and time for planned events","","","","",""  ],
   ["function","(mathematics","","","","",""  ],
@@ -2593,7 +2630,8 @@
             // On form submit, prevent page refresh. Compare user text to current word. Roll word if correct, show error animation if wrong.
             function handleForm(event) { 
                 event.preventDefault(); 
-                document.getElementById("typingForm").classList.remove("wrong");
+                document.getElementById("game").classList.remove("wrong");
+                document.getElementById("score").classList.remove("right");
 
                 var userInput = document.getElementById("typedWord").value;
                 var currentWord = document.getElementById("currentWord").innerText;
@@ -2610,8 +2648,9 @@
                     localStorage["score"] = score;
                     document.getElementById("score").innerText = score;
                     rollWord();
+                    document.getElementById("score").classList.add("right");
                 } else {
-                    document.getElementById("typingForm").classList.add("wrong");
+                    document.getElementById("game").classList.add("wrong");
                 }
             } 
             document.getElementById("typingForm").addEventListener('submit', handleForm);
